--- a/index.html
+++ b/index.html
@@ -30,5 +30,20 @@
         <li>comer</li>
         <li>indioma</li>
     </ol>
+    <ol>
+        <li>gatos</li>
+        <li>comer</li>
+        <li>indioma</li>
+    </ol> 
+    <ol>
+        <li>gatos</li>
+        <li>comer</li>
+        <li>indioma</li>
+    </ol>
+    <ol>
+        <li>gatos</li>
+        <li>comer</li>
+        <li>indioma</li>
+    </ol>
 </body>
 </html>
